appstudio/gitops-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: controller-manager
  name: appstudio-gitops-service
